--- a/MurderMystery.html
+++ b/MurderMystery.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>RPG Game</title>
-</head>
-<body>
-    <div id="Gname"> // This box holds the image or text for the tite of the game.
-        
+  </head>
+  <body>
+    <div id="Gname">
+      // This box holds the image or text for the tite of the game.
     </div>
-    <div id="Gmenu"> // This box holds the menue for starting the game or viewing saves and things of the sort.
-
+    <div id="Gmenu">
+      // This box holds the menue for starting the game or viewing saves and
+      things of the sort.
     </div>
-
-
-
-
-
-
-
-
-
-
-    
-</body>
+  </body>
 </html>
