--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         ></script>
     </head>
     <body>
+        <p style="background-image : url('img/office.jpg');">       </p>
         <div style="padding: 17px">
             <div
                 style="
