--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         ></script>
     </head>
     <body>
-        <p style="background-image : url('img/office.jpg');">       </p>
         <div style="padding: 17px">
+            <div>
+                <p style="background-image : url('img/office.jpg');">       </p>
+
+            </div>
             <div
                 style="
                     padding: 17px;
