placing sign up button back

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
                         </button>
                     </div>
                     <div style="padding: 17px">
-                       
+                        <button
+                            id="sign-up-button"
+                            style="height: 50px; width: 100px"
+                        >
+                            Sign Up
+                        </button>
                         <a href="/MurderMystery.html">Test link to game</a>
 
                     </div>
