--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                             Sign Up
                         </button>
                         <a href="/MurderMystery.html">Test link to game</a>
+                        <a href="/MurderMystery.html">Test link to game</a>
+
 
                     </div>
                 </div>
