--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
         ></script>
     </head>
-    <body>
+    <body style="background-color: black">
         <div style="height: 100%; display: flex">
             <div
                 style="
@@ -22,7 +22,7 @@
                     width: 90%;
                     height: 90%;
                     margin: auto;
-                    background-color: #dbbcac;
+                    background-color: #c3c3c3;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -48,6 +48,7 @@
                         <input
                             id="username"
                             style="height: 30px; width: 250px"
+                            placeholder="username"
                         />
                     </div>
                     <div style="padding: 17px">
@@ -55,6 +56,7 @@
                         <input
                             id="password"
                             style="height: 30px; width: 250px"
+                            placeholder="password"
                         />
                         <div class="helper-text">
                             *Please use at least 6 characters.
