adding log out function

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -75,8 +75,20 @@
                             align-items: flex-end;
                         "
                     >
-                        <button>Log out</button>
+                        <button id="logout-button">Log out</button>
                     </div>
+                </div>
+                <div
+                    style="
+                        flex-grow: 1;
+                        display: flex;
+                        align-content: flex-end;
+                        flex-wrap: wrap;
+                    "
+                >
+                    <footer style="color: white">
+                        &copy 2023. Aaron Karius & Hayden Comer.
+                    </footer>
                 </div>
             </div>
         </div>
