adding more buttons and stuff

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -59,6 +59,7 @@
                             background-color: rgba(255, 255, 255, 0.9);
                         "
                     >
+                        <!-- make this into progress ?  -->
                         <h4>Release Notes</h4>
                         <hr />
                     </div>
@@ -67,7 +68,6 @@
                         style="
                             padding: 27px;
                             flex-grow: 1;
-                            border: solid black thin;
                             height: 50vh;
                             margin: 50px;
                             display: flex;
@@ -75,7 +75,62 @@
                             align-items: flex-end;
                         "
                     >
-                        <button id="logout-button">Log out</button>
+                        <div style="padding: 17px">
+                            <button
+                                id="new-game-button"
+                                style="
+                                    width: 200px;
+                                    height: 50px;
+                                    border-radius: 10px;
+                                    background-color: rgb(143, 40, 40);
+                                    color: white;
+                                "
+                            >
+                                New Game
+                            </button>
+                        </div>
+                        <div style="padding: 17px">
+                            <button
+                                id="new-game-button"
+                                style="
+                                    width: 200px;
+                                    height: 50px;
+                                    border-radius: 10px;
+                                    background-color: rgb(143, 40, 40);
+                                    color: white;
+                                "
+                            >
+                                Continue
+                            </button>
+                        </div>
+                        <div style="padding: 17px">
+                            <button
+                                id="new-game-button"
+                                style="
+                                    width: 200px;
+                                    height: 50px;
+                                    border-radius: 10px;
+                                    background-color: rgb(112, 103, 79);
+                                    color: white;
+                                "
+                            >
+                                Report an Issue
+                            </button>
+                        </div>
+                        <div style="padding: 17px">
+                            <button
+                                id="logout-button"
+                                style="
+                                    width: 200px;
+                                    height: 50px;
+                                    border-radius: 10px;
+                                    background-color: rgb(67, 66, 58);
+                                    color: white;
+                                "
+                            >
+                                Log out
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div
