--- a/MainMenu.html
+++ b/MainMenu.html
@@ -60,6 +60,7 @@
                         "
                     >
                         <h4>Release Notes</h4>
+                        <a href="/MurderMystery.html">Start Game</a>
                         <hr />
                     </div>
                     <!-- buttons -->
