--- a/MainMenu.html
+++ b/MainMenu.html
@@ -60,7 +60,7 @@
                         "
                     >
                         <h4>Release Notes</h4>
-                        <h4 href="/MurderMystery.html">Start Game</h4>
+                        <a href="/MurderMystery.html">Start Game</a>
                         <hr />
                     </div>
                     <!-- buttons -->
