--- a/MainMenu.html
+++ b/MainMenu.html
@@ -76,7 +76,7 @@
                         "
                     >
                         <button>Log out</button>
-                        <a href="/MurderMystery.html">Start Game</a>
+                        <a href="MurderMystery.html">Start Game</a>
                     </div>
                 </div>
             </div>
