some styling spelling and convention changes

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -3,8 +3,6 @@
         <meta charset="UTF-8" />
         <title>RPG Game</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
-        <link rel="stylesheet" type="text/css" href="css/MurderMystery.css" />
-
         <!-- Jquery library   ---->
         <script
             src="https://code.jquery.com/jquery-3.5.1.js"
@@ -85,13 +83,14 @@
                                     background-color: rgb(143, 40, 40);
                                     color: white;
                                 "
+                                onclick="window.location.href='MurderMystery.html'"
                             >
                                 New Game
                             </button>
                         </div>
                         <div style="padding: 17px">
                             <button
-                                id="new-game-button"
+                                id="continue-game-button"
                                 style="
                                     width: 200px;
                                     height: 50px;
@@ -105,7 +104,7 @@
                         </div>
                         <div style="padding: 17px">
                             <button
-                                id="new-game-button"
+                                id="report-button"
                                 style="
                                     width: 200px;
                                     height: 50px;
