--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" style="height: 100%; display: flex">
     <head>
         <meta charset="UTF-8" />
         <title>RPG Game</title>
@@ -10,7 +11,7 @@
             crossorigin="anonymous"
         ></script>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; flex-grow: 1">
         <div style="height: 100%; display: flex">
             <div
                 style="
