wouldnt let me change file name for some reason

--- a/MurderMystery.html
+++ b/MurderMystery.html
@@ -121,5 +121,5 @@
     <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.6.0/firebase-auth-compat.js"></script>
     <!-- js -->
-    <script src="./js/murderMystery.js"></script>
+    <script src="./js/MurderMystery.js"></script>
 </html>
