some rubric changes

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -28,9 +28,39 @@
                     align-items: center;
                 "
             >
+                <div style="position: absolute; top: 27px; left: 27px">
+                    <h4 style="color: white">Project Leader - Hayden Comer</h4>
+                    <a
+                        style="color: lightblue; margin-left: 27px"
+                        href="mailto:hcomer@usca.edu"
+                        >Email</a
+                    >
+                    <h4 style="color: white">Developer - Aaron Karius</h4>
+                    <a
+                        style="color: lightblue; margin-left: 27px"
+                        href="mailto:agkarius@usca.edu"
+                        >Email</a
+                    >
+                </div>
                 <!-- header -->
-                <div style="display: flex; justify-content: center">
+                <div
+                    style="
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        align-items: center;
+                    "
+                >
                     <h1 id="user-welcome" style="color: white">Welcome user</h1>
+                    <h2
+                        style="
+                            color: white;
+                            border: solid thin white;
+                            padding: 7px;
+                        "
+                    >
+                        RPG Pather
+                    </h2>
                 </div>
                 <div
                     style="
@@ -70,6 +100,11 @@
                                     Initial release! Adding story demo, database
                                     and user authentication.
                                 </p>
+                                <p>
+                                    Description of the project: implement a web
+                                    game similar to "Oregon Trail"
+                                </p>
+                                <p>Bug report: no bugs currently identified.</p>
                             </li>
                         </ul>
                     </div>
@@ -146,16 +181,9 @@
                         </div>
                     </div>
                 </div>
-                <div
-                    style="
-                        flex-grow: 1;
-                        display: flex;
-                        align-content: flex-end;
-                        flex-wrap: wrap;
-                    "
-                >
+                <div style="position: absolute; bottom: 17px">
                     <footer style="color: white">
-                        &copy 2023. Aaron Karius & Hayden Comer.
+                        &copy 2023. Hayden Comer & Aaron Karius.
                     </footer>
                 </div>
             </div>
