--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                         flex-wrap: wrap;
                     "
                 >
-                    <footer>&copy 2023. Aaron Karius & Hayden Comer.</footer>
+                    <footer style="color: white">
+                        &copy 2023. Hayden Comer & Aaron Karius.
+                    </footer>
                 </div>
             </div>
         </div>
