Demo Completion Level Story Update

--- a/MurderMystery.html
+++ b/MurderMystery.html
@@ -13,13 +13,17 @@
     </head>
     <body style="background-color: black; flex-grow: 1">
         <div style="height: 100%; display: flex">
-            <div
+            <div id = "background"
                 style="
                     border: solid thin black;
                     border-radius: 25px;
                     width: 100%;
                     height: 100%;
-                    background-color: grey;
+                    background-image: url(./img/GameMenu.webp);
+                    background-size: contain;
+                    background-position: center center;
+                    background-attachment: fixed;
+                   
                     display: flex;
                     align-content: center;
                     flex-wrap: wrap;
